<resources>
    <string name="app_name">VanVatSach</string>
    <string name="warning_other_installation_method">This app is installed by other source that hasn\'t listed to our trusted sources. Please uninstall the app and install again using our trusted sources like Google Play Store, Amazon Appstore,...</string>
    <string name="warning_unknown_installation_method">This app is installed by unknown source and likely from the APK file. Those APK file are pirate product and maybe contains malwares that can be harmful to your device. Please uninstall the app immediately and install again using our trusted sources like Google Play Store, Amazon Appstore,...</string>
    <string name="warning">Warning!</string>
    <string name="proceed_warning">Proceed!</string>
    <string name="login_title">Login</string>
    <string name="login_username_email">Username or Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_warning_untrusted_installation">Untrusted Source Warning!</string>
    <string name="login_warning_untrusted_installation_general">Untrusted Source Warning! Hackers may inserted malware code to gather information from this input. Input your info at your own risk!</string>
    <string name="main_recommended">Recommended</string>
    <string name="detailed_description">Description</string>
    <string name="detailed_read">Read</string>
    <string name="detailed_buy">Buy</string>
    <string name="detailed_rating">Rating</string>
    <string name="detailed_chapter">Chapter</string>
    <string name="detailed_pages">Pages</string>
    <string name="detailed_size">Size</string>
    <string name="main_profile">Profile</string>
    <string name="main_homepage">Homepage</string>
    <string name="settings_general_monochrome_mode">Monochrome mode</string>
    <string name="settings_group_general">General</string>
    <string name="main_settings">Settings</string>
    <string name="login_save_password">Save password</string>
    <string name="main_history">History</string>
    <string name="settings_reading_horizontal_mode">Horizontal book layout</string>
    <string name="settings_reading_night_mode">Inverse color (Night mode)</string>
    <string name="settings_group_reading">Reading</string>
    <string name="settings_reading_antialiasing">Antialiasing</string>
    <string name="detailed_continue_reading">Continue reading</string>
    <string name="settings_reading_keep_awake_while_reading">Keep screen on while reading</string>
    <string name="detailed_download">Download</string>
    <string name="main_downloaded">Downloaded</string>
    <string name="main_search">Search</string>
    <string name="settings_reading_page_fling">Page fling</string>
    <string name="settings_reading_page_snap">Page snap</string>
    <string name="detailed_delete">Delete</string>
    <string name="settings_testing">Testing</string>
    <string name="greeting_morning">Good morning</string>
    <string name="greeting_noon">Good noon</string>
    <string name="greeting_afternoon">Good afternoon</string>
    <string name="greeting_evening">Good evening</string>
    <string name="greeting_night">Good night!</string>
    <string name="settings_log_out">Log out</string>
    <string name="register_button">Register</string>
    <string name="settings_group_account">Account</string>
    <string name="profile_streak">Streak</string>
    <string name="settings_statistics">Statistics</string>
    <string name="unit_milliseconds_long">seconds</string>
    <string name="unit_seconds_long">seconds</string>
    <string name="unit_minutes_long">minutes</string>
    <string name="unit_hours_long">hours</string>
    <string name="unit_days_long">days</string>
    <string name="unit_months_long">months</string>
    <string name="unit_years_long">years</string>
    <string name="unit_milliseconds_short">s</string>
    <string name="unit_seconds_short">s</string>
    <string name="unit_minutes_short">m</string>
    <string name="unit_hours_short">h</string>
    <string name="unit_days_short">d</string>
    <string name="unit_months_short">mo</string>
    <string name="unit_years_short">y</string>
</resources>