<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_group_general">

        <SwitchPreferenceCompat
            app:key="@string/settings_general_monochrome_mode"
            app:title="@string/settings_general_monochrome_mode"
            app:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_group_reading">

        <SwitchPreferenceCompat
            app:key="@string/settings_reading_horizontal_mode"
            app:title="@string/settings_reading_horizontal_mode"
            app:defaultValue="false"/>
        <SwitchPreferenceCompat
            app:key="@string/settings_reading_night_mode"
            app:title="@string/settings_reading_night_mode"
            app:defaultValue="false"/>
        <SwitchPreferenceCompat
            app:key="@string/settings_reading_antialiasing"
            app:title="@string/settings_reading_antialiasing"
            app:defaultValue="true"/>
        <SwitchPreferenceCompat
            app:key="@string/settings_reading_keep_awake_while_reading"
            app:title="@string/settings_reading_keep_awake_while_reading"
            app:defaultValue="false"/>
        <SwitchPreferenceCompat
            app:key="@string/settings_reading_page_fling"
            app:title="@string/settings_reading_page_fling"
            app:defaultValue="true"/>
        <SwitchPreferenceCompat
            app:key="@string/settings_reading_page_snap"
            app:title="@string/settings_reading_page_snap"
            app:defaultValue="true"/>
    </PreferenceCategory>

</PreferenceScreen>
